sass/site/layout/_footer.scss
footer.site-footer {
  width: 100%;
  display: flex;
  flex-direction: column;

  & > div {
    width: 100%;
    display: flex;
    justify-content: center;
  }

  h6 {
    font-size: 0.95em;
    margin-bottom: 0;
    text-transform: uppercase;
    letter-spacing: 0.05em;
  }

  .container {
    width: 75%;
    @include flexbox();
    @include justify-content(space-between);
  }

  .footer-map {
    width: 100%;

    .footer-contact {
      a {
        margin-top: 0;
        text-decoration: none;
        font-weight: bold;
        color: inherit;
        font-size: 0.8em;

        &:hover {
          text-decoration: none;
          color: inherit;
        }
      }
    }

    .footer-social {
      a {
        color: lighten($color__grey, 10%);
        text-decoration: none;
        img {
          height: 30px;
        }
      }
    }
  }

  .footer-copyright {
    @include font-size(0.9);
    background: $color__black;
    color: darken($color__white, 30%);
    padding: $spacing__2 0;
    width: 100%;

    a {
      color: lighten($color__grey, 10%);
      text-decoration: none;
    }

    .footer-credits {
      text-align: right;
    }
  }
}

